--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -12,15 +12,16 @@ li.card-container {
     width: 100%;
     padding: 10px 12px;
     border-radius: 8px;
-    background: #f9f9f9;
+    background: var(--bg-dark);
 
     &:hover {
-      box-shadow: #dddddd 4px 4px 8px 0 inset, #ffffff 4px -4px 8px 0 inset;
+      box-shadow: var(--bg) 4px 4px 8px 0 inset,
+        var(--bg-dark) 4px -4px 8px 0 inset;
       transition: box-shadow 500ms;
     }
 
     h3.card-title {
-      color: #2d2d2d;
+      color: var(--text);
       font-size: 14px;
       text-transform: capitalize;
       margin-top: 0;
