--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<li class="card-container">
+<li class="card-container" (click)="goToCountry()">
   <div class="card">
     <h3 class="card-title">{{ card.name.common }}</h3>
   </div>
