--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,31 +1,51 @@
 li.card-container {
   display: flex;
   flex-direction: row;
-  min-width: 168px;
-  min-height: 100px;
-  margin: 8px;
+  width: 240px;
+  margin: 20px;
+  cursor: pointer;
 
   .card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
-    padding: 10px 12px;
-    border-radius: 8px;
     background: var(--bg-dark);
+    border-radius: 4px;
+    overflow: hidden;
 
     &:hover {
-      box-shadow: var(--bg) 4px 4px 8px 0 inset,
-        var(--bg-dark) 4px -4px 8px 0 inset;
+      box-shadow: var(--bg) 4px 4px 8px 0, var(--bg-dark) 4px -4px 8px 0;
       transition: box-shadow 500ms;
     }
 
-    h3.card-title {
-      color: var(--text);
-      font-size: 14px;
-      text-transform: capitalize;
-      margin-top: 0;
-      margin-bottom: 4px;
+    .image-container {
+      width: 100%;
+      height: 140px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .card-details {
+      padding: 16px;
+      background-color: var(--bg);
+
+      h3.card-title {
+        color: var(--text);
+        font-size: 16px;
+        font-weight: 600;
+        text-transform: capitalize;
+        margin-top: 0;
+        margin-bottom: 12px;
+      }
+
+      p {
+        font-size: 12px;
+        margin: 4px 0;
+      }
     }
   }
 }
