--- a/src/app/components/country-cards/country-cards.component.scss
+++ b/src/app/components/country-cards/country-cards.component.scss
@@ -1,9 +1,34 @@
-ul.cards-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style-type: none;
-  margin: 10px;
-  padding: 10px;
+.cards-container {
+  .search-input {
+    margin: 20px;
+
+    input {
+      width: 300px;
+      padding: 8px;
+      border-radius: 4px;
+      border: none;
+      outline: none;
+      background-color: var(--bg);
+      color: var(--text);
+
+      &:focus {
+        outline: 1px solid var(--text);
+        outline-offset: 2px;
+      }
+
+      &::placeholder {
+        color: var(--text);
+      }
+    }
+  }
+
+  ul.cards-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style-type: none;
+    margin: 10px;
+    padding: 10px;
+  }
 }
