--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="project-header">
   <div class="header-title">where in the world?</div>
-  <button class="btn-theme" (click)="setTheme()">
+  <button class="btn btn-theme" (click)="setTheme()">
     {{ isDarkTheme ? 'light' : 'dark' }} mode
   </button>
 </header>
