--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -20,3 +20,20 @@ body {
   color: var(--text);
   background-color: var(--bg-dark);
 }
+
+.btn {
+  background-color: var(--bg);
+  color: var(--text);
+  padding: 4px 8px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.btn:focus {
+  outline: 1px solid var(--text);
+}
