--- a/src/app/components/country-details/country-details.component.scss
+++ b/src/app/components/country-details/country-details.component.scss
@@ -15,8 +15,7 @@
     margin-top: 40px;
 
     .image-container {
-      height: 140px;
-
+      width: 50%;
       img {
         width: 100%;
         height: 100%;
